# mycpputils

./: CMakeLists.txt
include/: include.h  observable.h  observer.h
src/: observable.cpp  observer.cpp
